library/foundation/include/virgil/crypto/foundation/vscf_rsa.h

//
//  Handles implementation details.
//
typedef struct vscf_rsa_t vscf_rsa_t;
//
//  Allocate implementation context and perform it's initialization.
//  Postcondition: check memory allocation result.
//
VSCF_PUBLIC vscf_rsa_t *
vscf_rsa_new(void);
//
//  Delete given implementation context and it's dependencies.
//  This is a reverse action of the function 'vscf_rsa_new()'.
//
VSCF_PUBLIC void
vscf_rsa_delete(vscf_rsa_t *self);
//
//  Setup dependency to the interface 'random' with shared ownership.
//
VSCF_PUBLIC void
vscf_rsa_use_random(vscf_rsa_t *self, vscf_impl_t *random);
//
//  Generate ephemeral private key of the same type.
//  Note, this operation might be slow.
//
VSCF_PUBLIC vscf_impl_t *
vscf_rsa_generate_ephemeral_key(const vscf_rsa_t *self, const vscf_impl_t *key, vscf_error_t *error);
//
//  Import public key from the raw binary format.
//
//  Return public key that is adopted and optimized to be used
//  with this particular algorithm.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA public key must be imported from the format defined in
//  RFC 3447 Appendix A.1.1.
//
VSCF_PUBLIC vscf_impl_t *
vscf_rsa_import_public_key(const vscf_rsa_t *self, const vscf_raw_public_key_t *raw_key, vscf_error_t *error);
//
//  Import public key from the raw binary format.
//
VSCF_PRIVATE vscf_impl_t *
vscf_rsa_import_public_key_data(const vscf_rsa_t *self, vsc_data_t key_data, const vscf_impl_t *key_alg_info,
        vscf_error_t *error);
//
//  Export public key to the raw binary format.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA public key must be exported in format defined in
//  RFC 3447 Appendix A.1.1.
//
VSCF_PUBLIC vscf_raw_public_key_t *
vscf_rsa_export_public_key(const vscf_rsa_t *self, const vscf_impl_t *public_key, vscf_error_t *error);
//
//  Return length in bytes required to hold exported public key.
//
VSCF_PRIVATE size_t
vscf_rsa_exported_public_key_data_len(const vscf_rsa_t *self, const vscf_impl_t *public_key);
//
//  Export public key to the raw binary format without algorithm information.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA public key must be exported in format defined in
//  RFC 3447 Appendix A.1.1.
//
VSCF_PRIVATE vscf_status_t
vscf_rsa_export_public_key_data(const vscf_rsa_t *self, const vscf_impl_t *public_key,
        vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Import private key from the raw binary format.
//
//  Return private key that is adopted and optimized to be used
//  with this particular algorithm.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA private key must be imported from the format defined in
//  RFC 3447 Appendix A.1.2.
//
VSCF_PUBLIC vscf_impl_t *
vscf_rsa_import_private_key(const vscf_rsa_t *self, const vscf_raw_private_key_t *raw_key, vscf_error_t *error);
//
//  Import private key from the raw binary format.
//
VSCF_PRIVATE vscf_impl_t *
vscf_rsa_import_private_key_data(const vscf_rsa_t *self, vsc_data_t key_data, const vscf_impl_t *key_alg_info,
        vscf_error_t *error);
//
//  Export private key in the raw binary format.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA private key must be exported in format defined in
//  RFC 3447 Appendix A.1.2.
//
VSCF_PUBLIC vscf_raw_private_key_t *
vscf_rsa_export_private_key(const vscf_rsa_t *self, const vscf_impl_t *private_key, vscf_error_t *error);
//
//  Return length in bytes required to hold exported private key.
//
VSCF_PRIVATE size_t
vscf_rsa_exported_private_key_data_len(const vscf_rsa_t *self, const vscf_impl_t *private_key);
//
//  Export private key to the raw binary format without algorithm information.
//
//  Binary format must be defined in the key specification.
//  For instance, RSA private key must be exported in format defined in
//  RFC 3447 Appendix A.1.2.
//
VSCF_PRIVATE vscf_status_t
vscf_rsa_export_private_key_data(const vscf_rsa_t *self, const vscf_impl_t *private_key,
        vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Check if algorithm can encrypt data with a given key.
//
VSCF_PUBLIC bool
vscf_rsa_can_encrypt(const vscf_rsa_t *self, const vscf_impl_t *public_key, size_t data_len);
//
//  Calculate required buffer length to hold the encrypted data.
//
VSCF_PUBLIC size_t
vscf_rsa_encrypted_len(const vscf_rsa_t *self, const vscf_impl_t *public_key, size_t data_len);
//
//  Encrypt data with a given public key.
//
VSCF_PUBLIC vscf_status_t
vscf_rsa_encrypt(const vscf_rsa_t *self, const vscf_impl_t *public_key, vsc_data_t data,
        vsc_buffer_t *out) VSCF_NODISCARD;
//
//  Check if algorithm can decrypt data with a given key.
//  However, success result of decryption is not guaranteed.
//
VSCF_PUBLIC bool
vscf_rsa_can_decrypt(const vscf_rsa_t *self, const vscf_impl_t *private_key, size_t data_len);
//
//  Calculate required buffer length to hold the decrypted data.
//
VSCF_PUBLIC size_t
vscf_rsa_decrypted_len(const vscf_rsa_t *self, const vscf_impl_t *private_key, size_t data_len);